--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Embedded Game</h1>
-    <iframe src="http://pizza.pizzaedition.one/assets/allgames/polytrack41/index.html" width="100%" height="100%" style="border:none;"></iframe>
+    <iframe src="https://pizza.pizzaedition.one/assets/allgames/polytrack41/index.html" width="100%" height="100%" style="border:none;"></iframe>
 </body>
 </html>
