--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Embed External Game</title>
+    <title>PolyTrack</title>
+    <style>
+        /* Make the iframe fill the entire screen */
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-    <h1>Embedded Game</h1>
-    <iframe src="https://pizza.pizzaedition.one/assets/allgames/polytrack41/index.html" width="100%" height="100%" style="border:none;"></iframe>
+    <iframe src="https://pizza.pizzaedition.one/assets/allgames/polytrack41/index.html"></iframe>
 </body>
 </html>
