--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://pizza.pizzaedition.one/assets/allgames/polytrack41/index.html"></iframe>
+    <iframe src="https://icouldntfindthepizzaeditionongithub.pizzaedition.site/assets/allgames/polytrack41/index.html"></iframe>
 </body>
 </html>
